k8s/prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-operator-help
  namespace: openmng
  labels:
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "web-operator-help"
spec:
  ports:
    - name: web-operator-help
      port: 80
      targetPort: 80
  selector:
    app: web-operator-help
